--- a/src/main/resources/static/intro.html
+++ b/src/main/resources/static/intro.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>编排系统使用说明</title>
 </head>
-<body>
+<body style="background-color: aliceblue">
 <div>
+    <h1>试场编排系统使用简要说明</h1>
     <ol>
         <li>
             <br>
@@ -57,6 +58,22 @@
         </li>
         <li>
             <br>
+            <h3>核对单列表</h3>
+            样例如图。可以自行将不需要显示的字段隐藏（如隐藏性别、证件号等）。可以调整每行的数量（不过一般不需要改动）。
+            <br>
+            <img src="images/7.png" alt="">
+            <hr>
+        </li>
+        <li>
+            <br>
+            <h3>准考证列表(单张)</h3>
+            样例如图。这里是每个考生单张准考证。可以设置不显示照片的格式。在表格下方可以自定义相关提醒事项等内容。留空则不显示。
+            <br>
+            <img src="images/6.png" alt="">
+            <hr>
+        </li>
+        <li>
+            <br>
             生成完毕后，有多种类型的表格可供打印或者另存为。推荐的方式是：在打印预览页面，选择“另存为PDF”，将相关文件保存至本地，后续可以重复打印（防止每次随机生成导致数据前后不一致）。
             <br>
             <img src="images/4.png" alt="">
@@ -68,6 +85,8 @@
             <hr>
         </li>
         <li>
+            <br>
+            【照片链接生成工具】：将本地照片在浏览器页面上显示。
             <br>
             由于信息保密原因，考生照片不上传服务器。如果需要考生照片，那么需要下载“图片链接生成工具”这个Windows的本地软件（软件仅为几十KB打开即用）。双击打开后，选择本机的考生照片文件夹即可。选择完毕后，在软件内部会有一个照片链接，复制这个链接，粘贴到网页的对应地址，相关报表中的图片就能替换为考生的照片。考生照片的命名格式为【身份证号.jpg/png】或者【考生号.jpg/png】。
             <br>
