--- a/src/main/resources/static/intro.html
+++ b/src/main/resources/static/intro.html
@@ -27,6 +27,12 @@
             <hr>
         </li>
         <li>
+            上述模板有参考的样例，已填写完毕并且带照片的。点击这里下载：<a href="files/样例(考生证件照+示例Excel).zip">样例(考生证件照+示例Excel).zip</a>
+            <br>
+            样例中包含如下文件：考生信息Excel-样例.xlsx、试场场次Excel-样例.xlsx、照片文件夹 photos。
+            <hr>
+        </li>
+        <li>
             <br>
             若按照上述图例中的话，那么所有 06 类别的考生（考生信息模板中的），都可以分配到 06 类别的考场（考场安排模板中的）。
             <br>
