--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>试场编排系统</title>
-    <script src="js/lib/vue.js"></script>
-    <script src="js/lib/axios.min.js"></script>
+    <script src="js/lib/vue.3.5.8.global.prod.js"></script>
+    <script src="js/lib/axios.1.7.7.min.js"></script>
     <script src="js/lib/axios-config.js"></script>
-    <script src="js/utils/util.js?version=1.5.1"></script>
-    <script src="js/classes.js?version=1.5.1"></script>
+    <script src="js/utils/util.js?vV=1.6.1"></script>
+    <script src="js/classes.js?vVvVv=1.6.1"></script>
 </head>
 <style>
     .info {
